Fix: Favorite icon shifts on hover in OS+ (#187)
* Fix: Address favorite icon shift on hover in iModel browser

* Add: Support custom icon for "Remove from recents" action in IModelGrid

--- a/packages/modules/imodel-browser/src/containers/iModelTiles/IModelTile.module.scss
+++ b/packages/modules/imodel-browser/src/containers/iModelTiles/IModelTile.module.scss
@@ -12,6 +12,6 @@
 
 .iModelTile:hover {
   .iModelTileFavoriteIcon {
-    display: block;
+    display: flex;
   }
 }
